# deplock

./: pyproject.toml
deplock/: exceptions.py
deplock/configs/: poetry_lock.py
deplock/parser/: poetry.py  poetry_class.py  pylock.py  uv.py
deplock/types/: requirement.py
deplock/utils/: markers.py
tests/: test_markers.py  test_package_model.py  test_poetry_parser.py  test_reader.py  test_uv_parser.py
