[project]
name = "deplock"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Tyler Zupan", email = "tzupan@squareup.com" },
           { name = "Josh Hamet", email = "jhamet@squareup.com" },
]
requires-python = ">=3.10"
dependencies = [
    "poetry>=2.1.3",
    "pydantic>=2.11.7",
    "tomlkit>=0.13.3",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "ruff >=0.7.0, <1.0.0",
    "pytest >=6.2.5, <7.0.0",
    "ty>=0.0.1a9",
]
